2002-09-10  Clint Adams  <clint@zsh.org>

        * 17189: Sven: Completion/Unix/Type/_path_files: better
	splitting of -g-strings; this failed when patterns
	contained spaces

2002-09-06  Clint Adams  <clint@zsh.org>

        * 17629: Completion/Unix/Command/_ssh: patch from Juergen Erhard
        to handle ssh-keygen -f -p, &c.

2002-09-04  Clint Adams  <clint@zsh.org>

	* 17620: Completion/Unix/Command/_lynx: add new/missing
        lynx options.

2002-09-04  Bart Schaefer  <schaefer@zsh.org>

	* 16613 (modified): acconfig.h, zshconfig.ac, Src/init.c: detect
	variant tgetent() return value and test for it correctly.

2002-08-22  Clint Adams  <clint@zsh.org>

	* 17571: Src/Modules/terminfo.c: backport of terminfo segfault
        fix from 4.1.

2002-08-19  Felix Rosencrantz  <f_rosencrantz@yahoo.com>

	* 16863, 17562: Completion/Unix/Command/.distfiles:
	Forgot to add _larch and _valgrind

2002-08-18  Felix Rosencrantz  <f_rosencrantz@yahoo.com>

	* 16863, 17562 : Completion/Unix/Command/_larch,
	Completion/Unix/Command/_valgrind: merge new larch&valgrind
	completions from 4.1 branch

2002-08-17  Clint Adams  <clint@zsh.org>

	* unposted: Functions/Prompts/prompt_clint_setup: correct %v typo.

2002-08-14  Oliver Kiddle  <opk@zsh.org>

	* 16000, 16393 (Clint): Completion/Debian/Command/_debchange,
	Completion/Debian/Command/_apt-show-versions: merge new Debian
	completions from 4.1 branch

	* 17125 (Andrej), 17245: Completion/Unix/Command/_texinfo:
	merge texinfo completion from 4.1 branch

	* 17521: Completion/Unix/Command/_ant,
	Completion/Unix/Command/.distfiles: new completion for ant
 
2002-08-14  Peter Stephenson  <pws@csr.com>

	* unposted: Config/version.mk: version 4.0.6.

	* 17542 (Thomas Stromberg <thomas@stromberg.org>):
	Completion/Unix/Command/_mount: most systems don't have /etc/mnt.

2002-08-12  Peter Stephenson  <pws@csr.com>

	* 17482 (Karl Tomlinson): Src/Modules/termcap.c,
	Src/Modules/terminfo.c: resolve confusion over use of get/set